--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>¡Papel, piedra, tijera!</title>
-    <link rel="icon" href="/img/ico.png" sizes="32x32" />
+    <link rel="icon" href="img/ico.png" sizes="32x32" />
     <link rel="stylesheet" href="css/bulma.css" />
     <link rel="stylesheet" href="css/all.css" />
     <link rel="stylesheet" href="index.css">
-    <script src="dropdown.js"></script>
     <script src="bgmenu.js"></script>
 </head>
 
@@ -143,12 +142,10 @@
                                 </article>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
 
     <footer class="footer">
