--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                     <div class="field is-grouped">
                         <p class="control">
                             <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
-                                data-social-target="https://github.com/IsmaQO" target="_blank"
-                                href="https://github.com/IsmaQO">
+                                data-social-target="https://github.com/IsmaQO/ppt.github.io" target="_blank"
+                                href="https://github.com/IsmaQO/ppt.github.io">
                                 <span class="icon">
                                     <i class="fab fa-github"></i>
                                 </span>
                                 <span>
-                                    GitHub
+                                    Código
                                 </span>
                             </a>
                         </p>
